--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 -->
 <html>
 	<head>
-		<title>小筑网络工作室</title>
+		<title>ZxF工作室</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description" content="小筑网络工作室,是渭南市临渭区小筑网络工作室的官网">
-    <meta name="keywords" content="小筑网络,小筑网络工作室,小筑工作室,小筑">
+	<meta name="description" content="ZxF工作室">
+    <meta name="keywords" content="ZxF工作室">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta name="baidu-site-verification" content="code-C1rJA0Uijl" />
@@ -50,7 +50,7 @@ var _hmt = _hmt || [];
 							<li><a href="index.html">首页</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="http://czgov.cn" class="button special fit">小筑网络工作室</a></li>
+							<li><a href="http://czgov.cn" class="button special fit">ZxF工作室</a></li>
 						</ul>
 					</nav>
 
@@ -58,7 +58,7 @@ var _hmt = _hmt || [];
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>小筑网络工作室</h1>
+								<h1>ZxF工作室</h1>
 							</header>
 							<div class="content">
 								<p>不同媒介-同样精彩</p>
