--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ var _hmt = _hmt || [];
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-weibo"><span class="label">Weibo</span></a></li>
-								<li><a href="#" class="icon alt fa-wechat"><span class="label">Wechat</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://twitter.com/MsarYifv" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.douyin.com/user/MS4wLjABAAAAXF2-eah6PVnHhhaFQbQOeugBcTCVozMazoUEcRkdy2fgEXk1jfLrTqouhrYO1uE-" class="icon alt fa-weibo"><span class="fab fa-tiktok">抖音</span></a></li>
+								<li><a href="tencent://message/?uin=1590920647" class="icon alt fa-QQt"><span class="label">QQ</span></a></li>
+								<li><a href="https://github.com/Eremony" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						<ul class="copyright">
 	<li>&copy; 2021 ZxF工作室<a href="https://beian.miit.gov.cn" target="_blank"> 陕ICP备2021007758号-1</a> <a data-from="10680" href="https://webify.cloudbase.net/" target="_blank" rel="nofollow noopener noreferrer">CloudBase Webify</a> 提供网站托管服务</li>
