--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ var _hmt = _hmt || [];
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="tencent://message/?uin=1590920647" class="icon alt fa-qq"><span class="label">QQ</span></a></li>
-								<li><a href="https://www.douyin.com/user/MS4wLjABAAAAXF2-eah6PVnHhhaFQbQOeugBcTCVozMazoUEcRkdy2fgEXk1jfLrTqouhrYO1uE-" class="icon alt fa-tiktok"><span class="label">抖音</span></a></li>
-								<li><a href="mailto:langu54984@gmail.com" class="icon alt fa-envelope"><span class="label">邮箱</span></a></li>
+								<li><a href="https://www.douyin.com/user/MS4wLjABAAAAXF2-eah6PVnHhhaFQbQOeugBcTCVozMazoUEcRkdy2fgEXk1jfLrTqouhrYO1uE-" class="icon alt fa-tiktok"><span class="label">TikTok</span></a></li>								<li><a href="mailto:langu54984@gmail.com" class="icon alt fa-envelope"><span class="label">邮箱</span></a></li>
 								<li><a href="https://github.com/Eremony" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						<ul class="copyright">
