--- a/index.html
+++ b/index.html
@@ -60,8 +60,46 @@ var _hmt = _hmt || [];
 							<header class="major">
 								<h1>ZxF工作室</h1>
 							</header>
+							<div class="container">
+        <section class="services">
+            <h2>我们提供的服务</h2>
+            <div class="service-item">
+                Facebook
+            </div>
+            <div class="service-item">
+                X
+            </div>
+            <div class="service-item">
+                Instagram
+            </div>
+            <div class="service-item">
+                ChatGPT
+            </div>
+            <div class="service-item">
+                Telegram  等账号注册
+            </div>
+            <br>
+            <div class="service-item">
+               Google
+            </div>
+            <div class="service-item">
+                GMX邮箱注册
+            </div>
+            <br>
+            <div class="service-item">
+                校园门禁复制
+            </div>
+            <br>
+            <div class="service-item">
+                Office/Windows激活
+            </div>
+            <div class="service-item">
+                ge'zong文档制作与修改
+            </div>
+        </section>
+
 							<div class="content">
-								<p>不同媒介-同样精彩</p>
+								<p>与我相遇-更加精彩</p>
 								<ul class="actions">
 									<li><a href="http://czgov.cn" class="button next scrolly">敬请期待</a></li>
 								</ul>
@@ -78,7 +116,6 @@ var _hmt = _hmt || [];
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="tencent://message/?uin=1590920647" class="icon alt fa-qq"><span class="label">QQ</span></a></li>
-								<li><a href="https://www.douyin.com/user/MS4wLjABAAAAXF2-eah6PVnHhhaFQbQOeugBcTCVozMazoUEcRkdy2fgEXk1jfLrTqouhrYO1uE-" target="_blank" class="icon alt fa-tiktok"><span class="label">TikTok</span></a></li>
 								<li><a href="mailto:langu54984@gmail.com" class="icon alt fa-envelope"><span class="label">邮箱</span></a></li>
 								<li><a href="https://github.com/Eremony" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
