--- a/index.html
+++ b/index.html
@@ -63,33 +63,22 @@ var _hmt = _hmt || [];
 							<div class="container">
         <section class="services">
             <h2>我们提供的服务</h2>
+           
             <div class="service-item">
-                Facebook
+		    Facebook
+		    X 
+		    Instagram 
+		    ChatGPT等账号注册
             </div>
-            <div class="service-item">
-                X
-            </div>
-            <div class="service-item">
-                Instagram
-            </div>
-            <div class="service-item">
-                ChatGPT
-            </div>
-            <div class="service-item">
-                Telegram  等账号注册
-            </div>
-            <br>
             <div class="service-item">
                Google
             </div>
             <div class="service-item">
                 GMX邮箱注册
             </div>
-            <br>
             <div class="service-item">
                 校园门禁复制
             </div>
-            <br>
             <div class="service-item">
                 Office/Windows激活
             </div>
