--- a/index.html
+++ b/index.html
@@ -70,20 +70,23 @@ var _hmt = _hmt || [];
 		    Instagram 
 		    ChatGPT等账号注册
             </div>
+		<br>
             <div class="service-item">
                Google
             </div>
             <div class="service-item">
                 GMX邮箱注册
             </div>
+		<br>
             <div class="service-item">
                 校园门禁复制
             </div>
+		<br>
             <div class="service-item">
                 Office/Windows激活
             </div>
             <div class="service-item">
-                ge'zong文档制作与修改
+                Office文档制作与修改
             </div>
         </section>
 
