--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var _hmt = _hmt || [];
             <h2>我们提供的服务</h2>
            
             <div class="service-item">
-		    Facebook  X  Instagram  ChatGPT等账号注册
+		    Facebook &nbsp X &nbsp Instagram &nbsp ChatGPT等账号注册
             </div>
 		<br>
             <div class="service-item">
