--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var _hmt = _hmt || [];
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="#" class="logo"><strong>TYP</strong> <span>By AXI.</span></a>
+						<a href="#" class="logo"><strong>Pool</strong> <span>Gift TAX.</span></a>
 						<nav>
 							<a href="#menu">菜单</a>
 						</nav>
