--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ var _hmt = _hmt || [];
 							<li><a href="index.html">首页</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="http://czgov.cn" class="button special fit">ZxF工作室</a></li>
+							<li><a href="https://eremony.github.io/ZxF-o/" class="button special fit">ZxF工作室</a></li>
 						</ul>
 					</nav>
 
