--- a/index.html
+++ b/index.html
@@ -74,16 +74,17 @@ var _hmt = _hmt || [];
             <div class="service-item">
                 GMX邮箱注册
             </div>
-		<br>
             <div class="service-item">
                 校园门禁复制
             </div>
-		<br>
             <div class="service-item">
                 Office/Windows激活
             </div>
             <div class="service-item">
                 Office文档制作与修改
+            </div>
+		<div class="service-item">
+                欢迎联系 &nbsp QQ：1590920647
             </div>
         </section>
 
@@ -104,7 +105,7 @@ var _hmt = _hmt || [];
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="tencent://message/?uin=1590920647" class="icon alt fa-qq"><span class="label">QQ</span></a></li>
+								<li><a href="https://weibo.com/u/7945668715" class="icon alt fa-weibo"><span class="label">Weibo</span></a></li>
 								<li><a href="mailto:langu54984@gmail.com" class="icon alt fa-envelope"><span class="label">邮箱</span></a></li>
 								<li><a href="https://github.com/Eremony" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
