--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@ var _hmt = _hmt || [];
             </div>
 		<br>
             <div class="service-item">
-               Google
-            </div>
-            <div class="service-item">
-                GMX邮箱注册
+               Google &nbsp GMX邮箱注册
             </div>
             <div class="service-item">
                 校园门禁复制
@@ -83,7 +80,8 @@ var _hmt = _hmt || [];
             <div class="service-item">
                 Office文档制作与修改
             </div>
-		<div class="service-item">
+		<br>
+	<div class="service-item">
                 欢迎联系 &nbsp QQ：1590920647
             </div>
         </section>
