--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var _hmt = _hmt || [];
             </div>
 		<br>
             <div class="service-item">
-               Google &nbsp GMX邮箱注册
+               Google &nbsp GMX等邮箱注册
             </div>
             <div class="service-item">
                 校园门禁复制
