--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@ var _hmt = _hmt || [];
             <div class="service-item">
                Google &nbsp GMX等邮箱注册
             </div>
-            <div class="service-item">
-                校园门禁复制
-            </div>
+          
             <div class="service-item">
                 Office/Windows激活
             </div>
             <div class="service-item">
-                Office文档制作与修改
+               计算机远程优化
             </div>
 		<br>
 	<div class="service-item">
