--- a/index.html
+++ b/index.html
@@ -67,20 +67,22 @@ var _hmt = _hmt || [];
             <div class="service-item">
 		    Facebook &nbsp X &nbsp Instagram &nbsp ChatGPT等账号注册
             </div>
-		<br>
             <div class="service-item">
                Google &nbsp GMX等邮箱注册
             </div>
           
             <div class="service-item">
-                Office/Windows激活
+                Office/Windows激活，重装
             </div>
             <div class="service-item">
                计算机远程优化
             </div>
+		<div class="service-item">
+               软件安装
+            </div>
 		<br>
 	<div class="service-item">
-                欢迎联系 &nbsp QQ：1590920647
+                欢迎联系 &nbsp QQ群：908016242
             </div>
         </section>
 
