--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var _hmt = _hmt || [];
             <h2>我们提供的服务</h2>
            
             <div class="service-item">
-		    Facebook &nbsp X &nbsp Instagram &nbsp ChatGPT等账号注册
+		    Facebook &nbsp  Instagram &nbsp ChatGPT等各类账号注册
             </div>
             <div class="service-item">
                Google &nbsp GMX等邮箱注册
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
             </div>
 		<br>
 	<div class="service-item">
-                欢迎联系 &nbsp QQ群：908016242
+                欢迎联系 &nbsp QQ群：908016242（进入群聊可领取福利资源）
             </div>
         </section>
 
