--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ var _hmt = _hmt || [];
 						<ul class="actions vertical">
 							<li><a href="https://eremony.github.io/ZxF-o/" class="button special fit">ZxF工作室</a></li>
 						</ul>
+						<ul class="actions vertical">
+							<li><a href="mailto:langu54984@gmail.com" class="button special fit">问题反馈</a></li>
+						</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -89,7 +92,7 @@ var _hmt = _hmt || [];
 							<div class="content">
 								<p>与我相遇-更加精彩</p>
 								<ul class="actions">
-									<li><a href="http://czgov.cn" class="button next scrolly">敬请期待</a></li>
+									<li><a href="https://eremony.github.io/ZxF-o" class="button next scrolly">敬请期待</a></li>
 								</ul>
 							</div>
 						</div>
