--- a/index.html
+++ b/index.html
@@ -73,15 +73,18 @@ var _hmt = _hmt || [];
             <div class="service-item">
                Google &nbsp GMX等邮箱注册
             </div>
+		<div class="service-item">
+               电脑装机，配置代写
+            </div>
           
             <div class="service-item">
-                Office/Windows激活，重装
+                Office/Windows激活，安装
             </div>
             <div class="service-item">
                计算机远程优化
             </div>
 		<div class="service-item">
-               软件安装
+               各类软件安装
             </div>
 		<br>
 	<div class="service-item">
